--- a/demos/css/stylesheet.css
+++ b/demos/css/stylesheet.css
@@ -19,6 +19,20 @@ p1 {
     font-size: 90px;
 }
 
+#bodyrow {
+    height: 680px;
+}
+
+#groupbody {
+    float: left;
+    margin-top: 55px;
+}
+
+div.container-fluid{
+    vertical-align: middle;
+    width: 100%;
+}
+
 div.menu{
     float: right;
     margin-top: 35px;
@@ -44,10 +58,10 @@ div.margin{
 }
 
 div.controlsize{
-    height: 85%;
-    width: 65%;
+    height: 105%;
+    width: 100%;
     margin: auto;
-    margin-top: 150px;
+    margin-top: 1%;
     margin-bottom: 50px;
 }
 
@@ -89,9 +103,15 @@ img.copy {
 
 h1 {
     font-size: 25px;
-    text-align: center;
+    text-align: left;
     color: #000000;
     padding: 20px;
+}
+
+b1 {
+    font-size:50px;
+    color: #000000;
+    padding-top: 50px;
 }
 
 h1.head {
@@ -160,13 +180,10 @@ a:hover {
 .make-center {
   text-align: center;
   background-color: #ffffff;
-  margin-top: 0px;
+  padding: 0px 0px 0px 0px;
   height: 680px;
+  width: 100%;
 }
-
- divs.make-center{
-    text-align: center;
- }
 
 button.main {
   -moz-box-shadow:inset 0px 39px 0px -24px #e67a73;
@@ -180,13 +197,24 @@ button.main {
   display:inline-block;
   cursor:pointer;
   color:#ffffff;
-  padding:6px 15px;
+  padding:12px 20px;
   text-decoration:none;
+  margin-top: 50px;
   text-shadow:0px 1px 0px #b23e35;
+  font-size: 25px;
+  width: 245px;
 }
+
+#groupbutton{
+    text-align: center;
+    padding-left: 20%;
+    margin-top: 100px;
+}
+
 button:hover {
   background-color:#ff0000;
 }
+
 button:active {
   position:relative;
   top:1px;
@@ -217,10 +245,22 @@ button[disabled], input[disabled] {
     width: 25px;
 }
 
-@media all and (max-width: 625px) {
+@media all and (max-width: 910px) {
     tr, td, .logo {
         display: block;
     }
+
+    p1{
+        font-size: 50%;
+    }
+
+    .make-center {
+        text-align: center;
+        background-color: #ffffff;
+        padding: 0px 0px 0px 0px;
+        height: 20%;
+        width: 100%;
+      }
 
     .logo {
         text-align: center;
@@ -236,6 +276,11 @@ button[disabled], input[disabled] {
         float: right;
         margin-right: 0;
         margin-left: 12px;
+    }
+
+    div.col{
+        font-size: 100%;
+        padding: 4% 6% 0% 1%;
     }
 
     nav {
@@ -290,14 +335,14 @@ button[disabled], input[disabled] {
     }
 }
 
-@media all and (max-width: 620px) {
+@media all and (max-width: 910px) {
     button, input {
         display: block;
         margin: 5px 10px;
     }
 }
 
-@media all and (max-width: 500px) {
+@media all and (max-width: 910px) {
     h1 {
         font-size: 18px;
     }
